[workspace]
members = [
  "wasmi-fibonacci-32/script",
  "wasmi-fibonacci-32/program",
  "wasmi-fibonacci-64/script",
  "wasmi-fibonacci-64/program",
  "wasmi-fibonacci-128/script",
  "wasmi-fibonacci-128/program",
  "fibonacci-32/script",
  "fibonacci-32/program",
  "fibonacci-64/script",
  "fibonacci-64/program",
  "fibonacci-128/script",
  "fibonacci-128/program",
  "revm-32/script",
  "revm-32/program",
  "revm-64/script",
  "revm-64/program",
  "revm-128/script",
  "revm-128/program",
  "revm-32-optimized/program",
  "revm-32-optimized/script",
  "revm-64-optimized/program",
  "revm-64-optimized/script",
  "revm-128-optimized/program",
  "revm-128-optimized/script",

]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"

[workspace.dependencies]
sp1-zkvm = "4.1.0"
sp1-sdk = "4.1.0"
sp1-build = "4.1.0"
sp1-derive = "4.1.0"

[patch.crates-io]
# SHA2
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
# BigInt
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
# Keccak
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
# ECDSA
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-0.16.9-sp1-4.0.0" }
# BN254
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0" }

