[package]
name = "revm-64-optimized-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
# Sp1
sp1-zkvm = "4.1.0"

# EVM
revm-interpreter = "=9.0.0"
revm = { version = "=13.0.0", features = ["serde"], default-features = false }

# Misc
hex = "0.4.3"

[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0", package = "sha2" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", tag = "patch-0.16.9-sp1-4.0.0", package = "ecdsa" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0", package = "substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
