[workspace]
[package]
name = "revm-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
# Sp1
sp1-zkvm = "4.1.0"

# EVM
revm-interpreter = { git = "https://github.com/succinctlabs/revm", package = "revm-interpreter", branch = "main" }
revm = { git = "https://github.com/succinctlabs/revm", branch = "main", features = ["serde"], default-features = false }

# Misc
hex = "0.4.3"
