[workspace]
[package]
name = "revm-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
# Sp1
sp1-zkvm = "4.1.0"

# reth
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "optimism",
    "std",
] }
reth-codecs = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-consensus = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-evm = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-revm = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "std",
] }
reth-node-ethereum = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-evm-ethereum = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "std",
] }
reth-evm-optimism = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "optimism",
] }
reth-storage-errors = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "std",
] }
reth-trie = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-trie-common = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-chainspec = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-optimism-chainspec = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-execution-errors = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-execution-types = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-db = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-errors = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
reth-optimism-consensus = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "optimism",
] }

# revm
revm = { version = "14.0.0", features = [
    "optimism",
    "std",
    "serde",
    "kzg-rs",
], default-features = false }
revm-primitives = { version = "9.0.0", features = [
    "std",
    "serde",
], default-features = false }
revm-inspectors = "0.6"
revm-interpreter = { version = "=10.0.1", default-features = false }
revm-precompile = { version = "=11.0.1", default-features = false }

# Misc
hex = "0.4.3"

[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0", package = "sha2" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", tag = "patch-0.16.9-sp1-4.0.0", package = "ecdsa" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0", package = "substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }

# Cryptographic patches
blst = { git = "https://github.com/sp1-patches/blst", tag = "rsp-20240830" }

# Alloy patches
alloy-chains = { git = "https://github.com/sp1-patches/alloy", tag = "rsp-20240830" }
alloy-primitives = { git = "https://github.com/sp1-patches/alloy", tag = "rsp-20240830" }
alloy-sol-types = { git = "https://github.com/sp1-patches/alloy", tag = "rsp-20240830" }
alloy-serde = { git = "https://github.com/sp1-patches/alloy", tag = "rsp-20240830" }
alloy-eip2930 = { git = "https://github.com/sp1-patches/alloy", tag = "rsp-20240830" }
alloy-eip7702 = { git = "https://github.com/sp1-patches/alloy", tag = "rsp-20240830" }
alloy-trie = { git = "https://github.com/sp1-patches/alloy", tag = "rsp-20240830" }
alloy-eips = { git = "https://github.com/sp1-patches/alloy", tag = "rsp-20240830" }
alloy-genesis = { git = "https://github.com/sp1-patches/alloy", tag = "rsp-20240830" }
